php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35381 [PATCH] ssl lib not initialized causes garbage when used with soap ext.
Submitted: 2005-11-25 04:39 UTC Modified: 2005-11-28 11:28 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: alan at akbkhome dot com Assigned:
Status: Closed Package: OpenSSL related
PHP Version: 5.1.0 OS: linux
Private report: No CVE-ID: None
 [2005-11-25 04:39 UTC] alan at akbkhome dot com
Description:
------------
Patch to fix

Index: ext/openssl/openssl.c
===================================================================
RCS file: /repository/php-src/ext/openssl/openssl.c,v
retrieving revision 1.98.2.1
diff -p -u -r1.98.2.1 openssl.c
--- ext/openssl/openssl.c       18 Aug 2005 13:34:37 -0000      1.98.2.1
+++ ext/openssl/openssl.c       25 Nov 2005 03:03:47 -0000
@@ -584,6 +584,7 @@ PHP_MINIT_FUNCTION(openssl)
        le_x509 = zend_register_list_destructors_ex(php_x509_free, NULL, "OpenSSL X.509", module_number);
        le_csr = zend_register_list_destructors_ex(php_csr_free, NULL, "OpenSSL X.509 CSR", module_number);

+       SSL_library_init();
        OpenSSL_add_all_ciphers();
        OpenSSL_add_all_digests();
        OpenSSL_add_all_algorithms();


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-28 11:28 UTC] alan_k@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC