fix bug #35381 - ensure library is initialized before use